# hanlib

./: .gitignore  changes.md  pyproject.toml  setup_private_package.md
docs/aiprompts/: ai_prompt_template.md  graph_excel_editor_reviewer.md
src/hanlib/: database.py  graph_excel_handler.py  hanslack.py  job_queue_sample_share.py  syncfolder.py  utils.py
tests/: __init__.py  conftest.py  test_database.py  test_database_pure.py  test_graph_excel_handler.py  test_syncfolder.py  test_utils.py
tests/testdata/test_database/: Fund Static Data - ActiveFunds v3.5.xlsx  listing.csv  listing.sql  nav.csv  nav.sql  nav_m.sql  product.csv  product.sql  shareclass.csv  shareclass.sql
